# iowahills_dsp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: ReadMe.rtf
examples/: CMakeLists.txt  FilterKitMain.cpp  FilterKitMain.h
include/iowahills/: CplxDMath.hpp  FFTCode.h  FIRFilterCode.h  FreqSamplingCode.h  IIRFilterCode.h  LowPassPrototypes.h  LowPassRoots.h  NewParksMcClellan.h  PFiftyOneRevE.h  QuadRootsRevH.h  fft.h  fir.h  freq_sampling.h  goertzel.h  iir.h  limits.h  lowpass_prototypes.h  lowpass_roots.h  parks_mcclellan.h  windowing.h
src/: FFTCode.cpp  FIRFilterCode.cpp  FreqSamplingCode.cpp  IIRFilterCode.cpp  LowPassPrototypes.cpp  LowPassRoots.cpp  NewParksMcClellan.cpp  PFiftyOneRevE.cpp  QuadRootsRevH.cpp  fft.cpp  fir.cpp  freq_sampling.cpp  goertzel.cpp  iir.cpp  lowpass_prototypes.cpp  lowpass_roots.cpp  non_throwing_vector.h  parks_mcclellan.cpp  windowing.cpp
tests/: test_fft.cpp
tools/: pmord_tool.cpp
